# AutoBoya

./: .gitignore  AGENTS.md  LICENSE  README.md  boya_live_probe.py  pyproject.toml
autoboya/: auth.py  bykc.py  cache.py  cli.py  config.py  crypto.py  exceptions.py  http.py  logging.py  models.py  rules.py  scheduler.py  session.py  storage.py  webvpn.py
docs/superpowers/plans/: 2026-05-20-autoboya-cli.md
tests/: test_auth.py  test_bykc.py  test_cache_views.py  test_cli_errors.py  test_cli_smoke.py  test_cli_users.py  test_logging_redaction.py  test_manual_operations.py  test_rules.py  test_scheduler.py  test_session.py  test_storage.py  test_webvpn_crypto.py
