[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoboya"
version = "0.1.0"
description = "BUAA Boya WebVPN CLI automation tool"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42",
  "httpx>=0.27",
  "keyring>=25",
  "rich>=13",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
autoboya = "autoboya.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
