[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoboya"
version = "0.1.4"
description = "北航博雅 WebVPN 命令行工具，支持课程缓存、自主签到课程自动选课、签到与签退"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "DeNeRATe-cool" },
]
keywords = ["buaa", "boya", "webvpn", "cli", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "cryptography>=42",
  "httpx>=0.27",
  "keyring>=25",
  "rich>=13",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
autoboya = "autoboya.cli:main"

[project.urls]
Homepage = "https://github.com/DeNeRATe-cool/AutoBoya"
Repository = "https://github.com/DeNeRATe-cool/AutoBoya"
Issues = "https://github.com/DeNeRATe-cool/AutoBoya/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoboya*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
